# stm32f3xx-hal

./: .markdownlint.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-0BSD.txt  LICENSE-MIT  README.md  RELEASE_PROCESS.md  build.rs  deny.toml  expanded.rs  memory.x  release.toml
.cargo/: config  config.toml
.github/workflows/: cargo.yml  ci.yml  clippy.yml  codegen.yml  hal.yml  link-checker.yml  markdown.yaml  markdown.yml  msrv.yml  rust.yml  rustfmt.yml  testsuite.yml
asm/: asm.rs
ci/: build.py
codegen/: Cargo.toml  README.md
codegen/src/: main.rs
codegen/src/codegen/: gpio.rs  mod.rs
codegen/src/cubemx/: db.rs  families.rs  mcu.rs  mod.rs  package.rs
codegen/src/cubemx/ip/: gpio.rs  mod.rs
codegen/tools/: .gitignore  NOTES.md  adc_channel.py  adc_channel.sh
examples/: adc.rs  can.rs  clocks.rs  dac.rs  dac_sine.rs  gpio_erased.rs  gpio_interrupts.rs  i2c_scanner.rs  pwm.rs  pwm2.rs  serial.rs  serial_dma.rs  serial_echo_rtic.rs  spi.rs  toggle.rs  usb_serial.rs
gpio_macros/: Cargo.toml
gpio_macros/src/: lib.rs
gpio_macros/tests/: builds.rs  gpio_pin_accidental_erased.rs  gpio_pin_accidental_erased.stderr  gpio_pin_forgot_af.rs  gpio_pin_forgot_af.stderr  gpio_pin_intended.rs  gpio_pin_partially_erased.rs  gpio_pin_partially_erased_bad_pin.rs  gpio_pin_partially_erased_bad_pin.stderr
src/: adc.rs  can.rs  clocks.rs  dac.rs  delay.rs  dma.rs  exti.rs  flash.rs  gpio.rs  i2-f1likec.rs  i2c - l1like.rs  i2c - original.rs  i2c.rs  i2cint.rs  interrupt.rs  interrupt_.rs  interrupts.rs  lib.rs  low_power.rs  prelude.rs  pwm.rs  rcc.rs  reg.rs  rtc.rs  serial.rs  signature.rs  spi.rs  syscfg.rs  time.rs  timer.rs  usb.rs  watchdog.rs
src/adc/: channel.rs  config.rs
src/gpio/: convert.rs  dynamic.rs  erased.rs  exti.rs  hal_02.rs  partially_erased.rs
src/rcc/: enable.rs
src/serial/: config.rs
src/spi/: config.rs
src/timer/: interrupts.rs
tests/: rcc.rs
testsuite/: Cargo.toml  README.md
testsuite/.cargo/: config.toml
testsuite/src/: lib.rs
testsuite/tests/: adc.rs  gpio_input.rs  gpio_input_puller.rs  gpio_output_open_drain.rs  gpio_output_push_pull.rs  rcc.rs  signature.rs  spi.rs  timer.rs  uart.rs  watchdog.rs
