[package]
edition = "2018"
authors = [
    "Dylan Frankland <dylan@frankland.io>",
    "Sh3Rm4n <f.vioel@gmail.com>",
    "Jan Teske <jteske@posteo.net>"
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32F3 series microcontrollers"
keywords = ["arm", "cortex-m", "stm32f3xx", "hal"]
license = "0BSD"
name = "stm32f3xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32f3xx-hal"
documentation = "https://docs.rs/stm32f3xx-hal"
version = "0.6.1"
exclude = [
    "codegen",
    ".markdownlint.yml"
]

[package.metadata.docs.rs]
features = ["stm32f303xc", "rt", "stm32-usbd", "can"]
targets = ["thumbv7em-none-eabihf"]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1"
cortex-m = "0.7"
cortex-m-rt = "0.6"
embedded-dma = "0.1"
embedded-hal = "0.2"
embedded-time = "0.10"
nb = "1"
paste = "1"
rtcc = "0.2"
stm32f3 = "0.13"
typenum = "1"

[dependencies.embedded-hal-can]
version = "0.1.0"
optional = true

[dependencies.stm32-usbd]
version = "0.6"
optional = true

[dependencies.void]
version = "1"
default-features = false

[dependencies.defmt]
version = "0.2"
optional = true

[dev-dependencies]
panic-semihosting = "0.5"
usb-device = "0.2"
usbd-serial = "0.1"
cortex-m-semihosting = "0.3"
panic-probe = "0.2"
defmt-rtt = "0.2"
defmt-test = "0.2"

[build-dependencies]
cargo_metadata = "0.13.1"
slice-group-by = "0.2.6"

[features]
default = ["unproven"]
unproven = ["embedded-hal/unproven"]
device-selected = []
direct-call-deprecated = []
ld = []
rt = ["stm32f3/rt"]
can = ["embedded-hal-can"]

svd-f301 = ["stm32f3/stm32f301"]
svd-f302 = ["stm32f3/stm32f302"]
svd-f303 = ["stm32f3/stm32f303"]
svd-f373 = ["stm32f3/stm32f373"]
svd-f3x4 = ["stm32f3/stm32f3x4"]

mem-4 = []
mem-6 = []
mem-8 = []
mem-b = []
mem-c = []
mem-d = []
mem-e = []

gpio-f302 = []
gpio-f303 = []
gpio-f303e = []
gpio-f333 = []
gpio-f373 = []

# Any changes here should be mirrored in README.md, build.rs, src/lib.rs, and
# .github/workflows/ci.yml.
stm32f301 = ["svd-f301", "direct-call-deprecated"]
stm32f301x6 = ["stm32f301", "mem-6", "gpio-f302", "device-selected"]
stm32f301x8 = ["stm32f301", "mem-8", "gpio-f302", "device-selected"]
stm32f318 = ["svd-f301", "direct-call-deprecated"]
stm32f318x8 = ["stm32f318", "mem-8", "gpio-f302", "device-selected"]
stm32f302 = ["svd-f302", "direct-call-deprecated"]
stm32f302x6 = ["stm32f302", "mem-6", "gpio-f302", "device-selected"]
stm32f302x8 = ["stm32f302", "mem-8", "gpio-f302", "device-selected"]
stm32f302xb = ["stm32f302", "mem-b", "gpio-f303", "device-selected"]
stm32f302xc = ["stm32f302", "mem-c", "gpio-f303", "device-selected"]
stm32f302xd = ["stm32f302", "mem-d", "gpio-f303e", "device-selected"]
stm32f302xe = ["stm32f302", "mem-e", "gpio-f303e", "device-selected"]
stm32f303 = ["svd-f303", "direct-call-deprecated"]
stm32f303x6 = ["stm32f303", "mem-6", "gpio-f333", "device-selected"]
stm32f303x8 = ["stm32f303", "mem-8", "gpio-f333", "device-selected"]
stm32f303xb = ["stm32f303", "mem-b", "gpio-f303", "device-selected"]
stm32f303xc = ["stm32f303", "mem-c", "gpio-f303", "device-selected"]
stm32f303xd = ["stm32f303", "mem-d", "gpio-f303e", "device-selected"]
stm32f303xe = ["stm32f303", "mem-e", "gpio-f303e", "device-selected"]
stm32f328 = ["svd-f303", "direct-call-deprecated"]
stm32f328x8 = ["stm32f328", "mem-8", "gpio-f333", "device-selected"]
stm32f358 = ["svd-f303", "direct-call-deprecated"]
stm32f358xc = ["stm32f358", "mem-c", "gpio-f303", "device-selected"]
stm32f398 = ["svd-f303", "direct-call-deprecated"]
stm32f398xe = ["stm32f398", "mem-e", "gpio-f303e", "device-selected"]
stm32f373 = ["svd-f373", "direct-call-deprecated"]
stm32f373x8 = ["stm32f373", "mem-8", "gpio-f373", "device-selected"]
stm32f373xb = ["stm32f373", "mem-b", "gpio-f373", "device-selected"]
stm32f373xc = ["stm32f373", "mem-c", "gpio-f373", "device-selected"]
stm32f378 = ["svd-f373", "direct-call-deprecated"]
stm32f378xc = ["stm32f378", "mem-c", "gpio-f373", "device-selected"]
stm32f334 = ["svd-f3x4", "direct-call-deprecated"]
stm32f334x4 = ["stm32f334", "mem-4", "gpio-f333", "device-selected"]
stm32f334x6 = ["stm32f334", "mem-6", "gpio-f333", "device-selected"]
stm32f334x8 = ["stm32f334", "mem-8", "gpio-f333", "device-selected"]

defmt-default = ["defmt"]
defmt-trace = ["defmt"]
defmt-debug = ["defmt"]
defmt-info = ["defmt"]
defmt-warn = ["defmt"]
defmt-error = ["defmt"]

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"

[[example]]
name = "pwm"
required-features = ["ld", "stm32f303xc"]

[[example]]
name = "toggle"
required-features = ["ld", "stm32f303xc"]

[[example]]
name = "usb_serial"
required-features = ["ld", "stm32f303xc", "stm32-usbd"]

[[example]]
name = "spi"
required-features = ["ld", "stm32f303"]

[[example]]
name = "can"
required-features = ["ld", "can", "stm32f303"]

[[example]]
name = "serial_dma"
required-features = ["ld", "stm32f303"]

[[example]]
name = "adc"
required-features = ["ld", "stm32f303"]

[[example]]
name = "i2c_scanner"
required-features = ["ld", "stm32f303xc"]

[[example]]
name = "gpio_erased"
required-features = ["ld", "stm32f303xc"]

[[example]]
name = "gpio_interrupts"
required-features = ["ld", "rt", "stm32f303xc"]

[[test]]
name = "rcc"
required-features = ["ld", "defmt"]
harness = false
