[package]
edition = "2021"
authors = [
    "Dylan Frankland <dylan@frankland.io>",
    "Sh3Rm4n <f.vioel@gmail.com>",
    "Jan Teske <jteske@posteo.net>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32F3 series microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "stm32f3", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f3xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32f3xx-hal"
documentation = "https://docs.rs/stm32f3xx-hal"
version = "0.9.2"
exclude = ["codegen", ".markdownlint.yml"]
resolver = "2"
rust-version = "1.60"

[package.metadata.docs.rs]
features = ["stm32f303xc", "rt", "usb", "can", "enumset"]
targets = ["thumbv7em-none-eabihf"]
rustc-args = ["--cfg", "docsrs"]

[workspace]
members = [".", "testsuite", "codegen"]

[dependencies]
bxcan = { version = "0.7.0", optional = true }
cfg-if = "1.0.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
defmt = { version = ">=0.2.3, <0.4.0", optional = true }
embedded-dma = "0.2.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-time = "0.12.1"
enumset = { version = "1.1.3", optional = true }
nb = "1.1.0"
num-traits = { version = "0.2.17", default-features = false}
paste = "1.0.14"
rtcc = { version = "0.3.0", optional = true }
stm32-usbd = { version = "0.6.0", optional = true }
stm32f3 = { version = "0.15.1", default-features = false }
void = { version = "1.0.2", default-features = false }

[dev-dependencies]
cortex-m-rtic = "1.1"
cortex-m-semihosting = "0.5.0"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
defmt-test = "0.3.1"
panic-probe = "0.3.1"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
panic-semihosting = "0.6.0"
rtt-target = { version = "0.4.0" }
systick-monotonic = "1.0"
usb-device = "0.3.1"
usbd-serial = "0.2.0"

[build-dependencies]
slice-group-by = "0.3.1"

[features]
can = ["dep:bxcan"]
default = ["rt", "ld", "usb", "can", "rtc", "enumset"]
defmt = ["dep:defmt"]

device-selected = []
direct-call-deprecated = []

gpio-f302 = []
gpio-f303 = []
gpio-f303e = []
gpio-f333 = []
gpio-f373 = []
ld = []

mem-4 = []
mem-6 = []
mem-8 = []
mem-b = []
mem-c = []
mem-d = []
mem-e = []
rt = ["stm32f3/rt"]
rtc = ["dep:rtcc"]

# Any changes here should be mirrored in README.md, build.rs, src/lib.rs, and
# .github/workflows/ci.yml.
stm32f301 = ["svd-f301", "direct-call-deprecated"]
stm32f301x6 = ["stm32f301", "mem-6", "gpio-f302", "device-selected"]
stm32f301x8 = ["stm32f301", "mem-8", "gpio-f302", "device-selected"]
stm32f302 = ["svd-f302", "direct-call-deprecated"]
stm32f302x6 = ["stm32f302", "mem-6", "gpio-f302", "device-selected"]
stm32f302x8 = ["stm32f302", "mem-8", "gpio-f302", "device-selected"]
stm32f302xb = ["stm32f302", "mem-b", "gpio-f303", "device-selected"]
stm32f302xc = ["stm32f302", "mem-c", "gpio-f303", "device-selected"]
stm32f302xd = ["stm32f302", "mem-d", "gpio-f303e", "device-selected"]
stm32f302xe = ["stm32f302", "mem-e", "gpio-f303e", "device-selected"]
stm32f303 = ["svd-f303", "direct-call-deprecated"]
stm32f303x6 = ["stm32f303", "mem-6", "gpio-f333", "device-selected"]
stm32f303x8 = ["stm32f303", "mem-8", "gpio-f333", "device-selected"]
stm32f303xb = ["stm32f303", "mem-b", "gpio-f303", "device-selected"]
stm32f303xc = ["stm32f303", "mem-c", "gpio-f303", "device-selected"]
stm32f303xd = ["stm32f303", "mem-d", "gpio-f303e", "device-selected"]
stm32f303xe = ["stm32f303", "mem-e", "gpio-f303e", "device-selected"]
stm32f318 = ["svd-f301", "direct-call-deprecated"]
stm32f318x8 = ["stm32f318", "mem-8", "gpio-f302", "device-selected"]
stm32f328 = ["svd-f303", "direct-call-deprecated"]
stm32f328x8 = ["stm32f328", "mem-8", "gpio-f333", "device-selected"]
stm32f334 = ["svd-f3x4", "direct-call-deprecated"]
stm32f334x4 = ["stm32f334", "mem-4", "gpio-f333", "device-selected"]
stm32f334x6 = ["stm32f334", "mem-6", "gpio-f333", "device-selected"]
stm32f334x8 = ["stm32f334", "mem-8", "gpio-f333", "device-selected"]
stm32f358 = ["svd-f303", "direct-call-deprecated"]
stm32f358xc = ["stm32f358", "mem-c", "gpio-f303", "device-selected"]
stm32f373 = ["svd-f373", "direct-call-deprecated"]
stm32f373x8 = ["stm32f373", "mem-8", "gpio-f373", "device-selected"]
stm32f373xb = ["stm32f373", "mem-b", "gpio-f373", "device-selected"]
stm32f373xc = ["stm32f373", "mem-c", "gpio-f373", "device-selected"]
stm32f378 = ["svd-f373", "direct-call-deprecated"]
stm32f378xc = ["stm32f378", "mem-c", "gpio-f373", "device-selected"]
stm32f398 = ["svd-f303", "direct-call-deprecated"]
stm32f398xe = ["stm32f398", "mem-e", "gpio-f303e", "device-selected"]

svd-f301 = ["stm32f3/stm32f301"]
svd-f302 = ["stm32f3/stm32f302"]
svd-f303 = ["stm32f3/stm32f303"]
svd-f373 = ["stm32f3/stm32f373"]
svd-f3x4 = ["stm32f3/stm32f3x4"]
usb = ["dep:stm32-usbd"]

# cargo build/run
[profile.dev]
debug = 2
# Disabled until https://github.com/knurling-rs/defmt/issues/649 is fixed
# lto = true

# cargo test
[profile.test]
debug = 2
opt-level = 3 # <-

# cargo build/run --release
[profile.release]
debug = 2
# Disabled until https://github.com/knurling-rs/defmt/issues/649 is fixed
# lto = true
opt-level = "s"

# cargo test --release
[profile.bench]
debug = 2
opt-level = "s"

[[example]]
name = "pwm"
required-features = ["ld", "stm32f303xc", "cortex-m/critical-section-single-core"]

[[example]]
name = "toggle"
required-features = ["ld", "stm32f303xc", "cortex-m/critical-section-single-core"]

[[example]]
name = "usb_serial"
required-features = ["ld", "stm32f303xc", "usb", "cortex-m/critical-section-single-core"]

[[example]]
name = "spi"
required-features = ["ld", "stm32f303xc", "cortex-m/critical-section-single-core"]

[[example]]
name = "can"
required-features = ["ld", "rt", "can", "stm32f302xc", "cortex-m/critical-section-single-core"]

[[example]]
name = "serial_dma"
required-features = ["ld", "rt", "stm32f303xc", "cortex-m/critical-section-single-core"]

[[example]]
name = "serial_echo_rtic"
required-features = ["ld", "rt", "stm32f303xc", "enumset", "cortex-m/critical-section-single-core"]

[[example]]
name = "adc"
required-features = ["ld", "stm32f303xc", "cortex-m/critical-section-single-core"]

[[example]]
name = "i2c_scanner"
required-features = ["ld", "stm32f303xc", "cortex-m/critical-section-single-core"]

[[example]]
name = "gpio_erased"
required-features = ["ld", "stm32f303xc", "cortex-m/critical-section-single-core"]

[[example]]
name = "gpio_interrupts"
required-features = ["ld", "rt", "stm32f303xc", "cortex-m/critical-section-single-core"]
