[package]
name = "codegen"
version = "0.1.0"
authors = ["Jan Teske <jteske@posteo.net>"]
edition = "2018"

[dependencies]
anyhow = "1"
once_cell = "1"
regex = "1"
serde-xml-rs = "0.4"

[dependencies.clap]
version = "2"
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]
