[package]
edition = "2021"
name = "testsuite"
publish = false
version = "0.0.0"

[lib]
harness = false

[[test]]
name = "adc"
harness = false

[[test]]
name = "uart"
harness = false

[[test]]
name = "rcc"
harness = false

[[test]]
name = "spi"
harness = false

[[test]]
name = "timer"
harness = false

[[test]]
name = "gpio_input"
harness = false

[[test]]
name = "gpio_output_push_pull"
harness = false

[[test]]
name = "gpio_output_open_drain"
harness = false

[[test]]
name = "gpio_input_puller"
harness = false

[[test]]
name = "watchdog"
harness = false

[[test]]
name = "signature"
harness = false

[dependencies]
cfg-if = "1.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
defmt-test = "0.3.1"
enumset = { version = "1.1.3" }
# TODO: Set stm32f303xc as default, but make it overwritable
stm32f3xx-hal = { path = "..", features = ["defmt"]}
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
nb = "1.1.0"
num-traits = { version = "0.2.17", default-features = false }

[features]
# enable all defmt logging levels
default = ["stm32f3xx-hal/stm32f303xc"]
